test/Fail/AnonymousRecConstrAmbig.err
AnonymousRecConstrAmbig.agda:9.5-19: error: [ConstructorNameOfNonRecord]
Only record types have constructor names, but mk is a constructor.
when scope checking mk.constructor
